--- a/.github/ISSUE_TEMPLATE/-----.md
+++ b/.github/ISSUE_TEMPLATE/-----.md
@@ -1,17 +1,28 @@
 ---
-name: 요청 사항
-about: 이 프로젝트로의 요청 사항
+name: 버그 신고
+about: 프로젝트 성장을 위해 버그를 신고해주세요
 
 ---
 
-**혹시 요청 사항이 버그와 관련되어 있나요?**
-어떤 종류의 문제인지 간단명료하게 설명해주세요. 예를 들어, "나는 [...] 할 때 짜증나요!"
+**버그 설명**
+어떤 버그인지 간단하게 설명해주세요.
 
-**이것으로 바뀌었으면 좋겠다 하는 방안을 알려주세요**
-어떻게 바뀌면 좋을지 간단명료하게 설명해주세요.
+**구현을 위해서**
+버그를 보기 위한 과정을 입력해주세요:
+1. '...'로 가서
+2. '....'를 클릭하고
+3. '....'로 움직이면
+4. 짜잔! 에러
 
-**이외로 고려해본 대안**
-만약 위 사항의 구현이 힘들 경우엔 어떻게 하면 좋을까요?
+**해결방안**
+이것으로 바뀌었으면 좋겠다 하는 해결방안을 알려주세요.
+
+**스크린샷**
+가능하다면, 스크린샷을 첨부해 문제를 설명해주세요.
+
+**Desktop (please complete the following information):**
+ - OS: [e.g. Windows 10]
+ - Version [e.g. 1807]
 
 **할 말**
-추가로 할 말이 있다면 이곳에 적어주세요.
+추가로 할 말이 있다면 자유롭게 적어주세요.
